--- a/1_html_file/index.html
+++ b/1_html_file/index.html
@@ -233,7 +233,7 @@
           <div class="feature-one__inner">
             <h2 class="feature-one__title">
               Explore the Possibilities of <br />
-              AI 🤖 with <span>AIMug</span>
+              AI 🤖 with <span>Arch AI</span>
             </h2>
             <div class="feature-one__btn-box">
               <a href="contact.html" class="thm-btn feature-one__btn">
@@ -314,7 +314,7 @@
                   </li>
                   <li>
                     <div class="feature-one__cpu-icon-box">
-                      <img src="images/icons/cpu.png" alt="" />
+                      <img src="images/resource/logo-1.png" alt="" />
                     </div>
                   </li>
                   <li>
@@ -566,7 +566,7 @@
             </div>
             <h2 class="section-title__title">
               Generative AI Designed for creators. Make <br />
-              your Life Easier with <span>AIMug</span>
+              your Life Easier with <span>Arch AI</span>
             </h2>
           </div>
           <div
@@ -853,10 +853,10 @@
                     <h3>Generate Outstanding AI Images Just Using Prompt 🌄</h3>
                   </div>
                   <p class="solutions-two__content-three-text-1">
-                    <span>AIMug</span> is an artificial art generator that turns
-                    your ideas into one-of-a kind artwork and photographs in
-                    seconds. Finally, you'll have the perfect image to go with
-                    your statement.
+                    <span>Arch AI</span> is an artificial art generator that
+                    turns your ideas into one-of-a kind artwork and photographs
+                    in seconds. Finally, you'll have the perfect image to go
+                    with your statement.
                   </p>
                   <div class="solutions-two__content-three-points-box">
                     <ul
@@ -1062,12 +1062,19 @@
               <p class="collaboration-one__sub-title">Integrations With</p>
               <h3 class="collaboration-one__title">
                 Streamlining Collaboration <br />
-                with AIMug
+                with Arch AI
               </h3>
             </div>
             <div class="collaboration-one__icon-box">
               <div class="collaboration-one__icon">
-                <img src="images/icons/cpu.png" alt="" />
+                <img
+                  src="images/resource/logo-1.png"
+                  style="
+                    object-fit: contain;
+                    filter: invert(1) brightness(2) contrast(1.1);
+                  "
+                  alt=""
+                />
                 <div class="collaboration-one__icon-shape-1">
                   <img
                     src="images/shapes/collaboration-one-icon-shape-1.png"
@@ -1115,8 +1122,8 @@
               <span class="section-title__tagline">Customer Stories</span>
             </div>
             <h2 class="section-title__title">
-              <span>AIMug.</span> Received <i class="icon-star"></i> 4.8/5 Stars
-              in <br />
+              <span>Arch AI.</span> Received <i class="icon-star"></i> 4.8/5
+              Stars in <br />
               Over 10,000+ Reviews.
             </h2>
           </div>
@@ -1910,7 +1917,7 @@
               >
             </div>
             <h2 class="section-title__title">
-              Questions About our AIMug? <br />
+              Questions About our Arch AI? <br />
               ​​​​​​​We have Answers!
             </h2>
           </div>
@@ -1918,7 +1925,7 @@
             <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
               <div class="accrodion">
                 <div class="accrodion-title">
-                  <h4>What Is AIMug Generative AI Tool?</h4>
+                  <h4>What Is Arch AI Generative AI Tool?</h4>
                 </div>
                 <div class="accrodion-content">
                   <div class="inner">
@@ -2063,7 +2070,7 @@
                   >
                 </div>
                 <h2 class="section-title__title">
-                  Be part of the future of AIMug Let’s <br />
+                  Be part of the future of Arch AI Let’s <br />
                   Create Something
                 </h2>
               </div>
