--- a/1_html_file/reset-password.html
+++ b/1_html_file/reset-password.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Aimug - Artificial Intelligence HTML-5 Template</title>
+    <title>Arch Ai</title>
 
     <link
       href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700;800&display=swap"
@@ -22,7 +22,7 @@
       href="css/color-themes/default-color.css"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/resource/" type="image/x-icon" />
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
