added logo in remaining pages

--- a/1_html_file/contact.html
+++ b/1_html_file/contact.html
@@ -59,7 +59,15 @@
               <!-- Logo Box -->
               <div class="main-header-one__logo-box">
                 <a href="index.html"
-                  ><img src="images/resource/logo-1.png" alt=""
+                  ><img
+                    src="images/resource/logo-1.png"
+                    alt="Logo"
+                    style="
+                      height: 80px;
+                      width: auto;
+                      object-fit: contain;
+                      filter: invert(1) brightness(2) contrast(1.1);
+                    "
                 /></a>
               </div>
 
@@ -270,7 +278,7 @@
                       <div class="text">
                         <p>
                           <a href="mailto:your.mail@gmail.com"
-                            >your.mail@gmail.com</a
+                            >shuja7058@gmail.com</a
                           >
                         </p>
                       </div>
@@ -554,7 +562,15 @@
                 <div class="footer-widget__column footer-widget__about">
                   <div class="footer-widget__logo">
                     <a href="index.html"
-                      ><img src="images/resource/footer-logo-1.png" alt=""
+                      ><img
+                        src="images/resource/logo-1.png"
+                        alt="Logo"
+                        style="
+                          height: 80px;
+                          width: auto;
+                          object-fit: contain;
+                          filter: invert(1) brightness(2) contrast(1.1);
+                        "
                     /></a>
                   </div>
                   <p class="footer-widget__about-text">
