--- a/1_html_file/login.html
+++ b/1_html_file/login.html
@@ -61,9 +61,9 @@
                 <a href="index.html"
                   ><img
                     src="images/resource/logo-1.png"
-                    alt=""
+                    alt="Logo"
                     style="
-                      height: 60px;
+                      height: 80px;
                       width: auto;
                       object-fit: contain;
                       filter: invert(1) brightness(2) contrast(1.1);
