--- a/1_html_file/reset-password.html
+++ b/1_html_file/reset-password.html
@@ -59,7 +59,15 @@
               <!-- Logo Box -->
               <div class="main-header-one__logo-box">
                 <a href="index.html"
-                  ><img src="images/resource/logo-1.png" alt=""
+                  ><img
+                    src="images/resource/logo-1.png"
+                    alt="Logo"
+                    style="
+                      height: 80px;
+                      width: auto;
+                      object-fit: contain;
+                      filter: invert(1) brightness(2) contrast(1.1);
+                    "
                 /></a>
               </div>
 
@@ -169,7 +177,15 @@
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="index.html"
-                ><img src="images/resource/logo-1.png" alt="" title=""
+                ><img
+                  src="images/resource/logo-1.png"
+                  alt="Logo"
+                  style="
+                    height: 80px;
+                    width: auto;
+                    object-fit: contain;
+                    filter: invert(1) brightness(2) contrast(1.1);
+                  "
               /></a>
             </div>
             <!-- Search -->
@@ -213,7 +229,10 @@
             <div class="reset-password-page__top">
               <div class="reset-password-page__logo">
                 <a href="index.html"
-                  ><img src="images/resource/login-page-logo.png" alt=""
+                  ><img
+                    src="images/resource/logo-1.png"
+                    alt=""
+                    style="height: 80px; width: auto; object-fit: contain"
                 /></a>
               </div>
             </div>
