--- a/1_html_file/blog.html
+++ b/1_html_file/blog.html
@@ -61,8 +61,13 @@
                 <a href="index.html"
                   ><img
                     src="images/resource/logo-1.png"
-                    alt=""
-                    style="height: 55px; width: auto; object-fit: contain"
+                    alt="Logo"
+                    style="
+                      height: 80px;
+                      width: auto;
+                      object-fit: contain;
+                      filter: invert(1) brightness(2) contrast(1.1);
+                    "
                 /></a>
               </div>
 
