--- a/1_html_file/index-2.html
+++ b/1_html_file/index-2.html
@@ -59,7 +59,15 @@
               <!-- Logo Box -->
               <div class="main-header-one__logo-box">
                 <a href="index.html"
-                  ><img src="images/resource/logo-1.png" alt=""
+                  ><img
+                    src="images/resource/logo-1.png"
+                    alt="Logo"
+                    style="
+                      height: 80px;
+                      width: auto;
+                      object-fit: contain;
+                      filter: invert(1) brightness(2) contrast(1.1);
+                    "
                 /></a>
               </div>
 
