index page  updated

--- a/1_html_file/index.html
+++ b/1_html_file/index.html
@@ -1579,18 +1579,15 @@
               <div class="section-title text-center">
                 <div class="section-title__tagline-box">
                   <span class="section-title__tagline"
-                    >14 Day’s Free Trail</span
+                    >100 creaditels Free Trail</span
                   >
                 </div>
                 <h2 class="section-title__title">
-                  Be part of the future of Architecture Ai Let’s <br />
-                  Create Something
+                  “Be Part of Architecture AI’s Journey <br> Claim Your 100 Free Credits Now!”
                 </h2>
               </div>
               <p class="free-trail__text">
-                Choose a topic & create something better than before, get
-                started from today. <br />
-                No Credit Card Required
+               “Let’s Create Something Amazing Get 100 Free Credits with Architecture AI Today.”
               </p>
               <div class="free-trail__btn-box">
                 <a href="contact.html" class="thm-btn-two free-trail__btn"
