--- a/1_html_file/login.html
+++ b/1_html_file/login.html
@@ -14,14 +14,6 @@
       rel="stylesheet"
     />
 
-    <!--Color Switcher Mockup-->
-    <link href="css/color-switcher-design.css" rel="stylesheet" />
-    <!-- Color Themes -->
-    <link
-      id="theme-color-file"
-      href="css/color-themes/default-color.css"
-      rel="stylesheet"
-    />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <link rel="icon" href="images/favicon.png" type="image/x-icon" />
     <!-- Responsive -->
@@ -68,7 +60,8 @@
                       object-fit: contain;
                       filter: invert(1) brightness(2) contrast(1.1);
                     "
-                /></a>
+                  />
+                </a>
               </div>
 
               <div class="nav-outer">
@@ -94,54 +87,17 @@
                     class="navbar-collapse collapse clearfix"
                     id="navbarSupportedContent"
                   >
-                    <ul class="navigation clearfix">
-                      <li class="dropdown">
-                        <a href="#">Home</a>
-                        <ul>
-                          <li>
-                            <a href="index.html">Home 01 (AI Products)</a>
-                          </li>
-                          <li>
-                            <a href="index-2.html">Home 02 (Content Writing)</a>
-                          </li>
-                          <li><a href="index-3.html">Home 03 (AI Image)</a></li>
-                          <li class="dropdown">
-                            <a href="#">Header Styles</a>
-                            <ul>
-                              <li><a href="index.html">Header Style One</a></li>
-                              <li>
-                                <a href="index-2.html">Header Style Two</a>
-                              </li>
-                              <li>
-                                <a href="index-3.html">Header Style Three</a>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
-                      </li>
+                    <ul class="navigation clearfix m-3">
+                      <a href="index.html" class="m-5">Home</a>
+
                       <li><a href="about.html">About</a></li>
-                      <li class="dropdown">
-                        <a href="#">Pages</a>
-                        <ul>
-                          <li><a href="career.html">Career</a></li>
-                          <li>
-                            <a href="career-details.html">Career Details</a>
-                          </li>
-                          <li><a href="login.html">Login</a></li>
-                          <li>
-                            <a href="create-account.html">Create Account</a>
-                          </li>
-                          <li>
-                            <a href="reset-password.html">Reset Password</a>
-                          </li>
-                          <li><a href="404.html">404 Error</a></li>
-                        </ul>
-                      </li>
-                      <li class="dropdown">
-                        <a href="#">Blog</a>
+
+                      <a href="career.html" class="m-2">Pages</a>
+
+                      <li class="dropdown m-4">
+                        <a href="blog.html">Blog</a>
                         <ul>
                           <li><a href="blog.html">Blog</a></li>
-                          <li><a href="blog-details.html">Blog Detail</a></li>
                         </ul>
                       </li>
                       <li><a href="contact.html">Contact</a></li>
@@ -156,6 +112,11 @@
                 <ul class="main-header__login-sing-up">
                   <li><a href="login.html">Login</a></li>
                   <li><a href="create-account.html">Sign Up</a></li>
+                  <li>
+                    <a href="Getprompts.html" class="btn-subscribe"
+                      >Get prompts</a
+                    >
+                  </li>
                 </ul>
 
                 <!-- Mobile Navigation Toggler -->
@@ -168,6 +129,7 @@
           </div>
         </div>
         <!-- End Header Lower -->
+
         <!-- Mobile Menu  -->
         <div class="mobile-menu">
           <div class="menu-backdrop"></div>
@@ -176,10 +138,20 @@
           </div>
           <nav class="menu-box">
             <div class="nav-logo">
-              <a href="index.html"
-                ><img src="images/resource/logo-1.png" alt="" title=""
-              /></a>
+              <a href="index.html">
+                <img
+                  src="images/resource/logo-1.png"
+                  alt="Logo"
+                  style="
+                    height: 35px;
+                    width: auto;
+                    object-fit: contain;
+                    filter: invert(1) brightness(2) contrast(1.1);
+                  "
+                />
+              </a>
             </div>
+
             <!-- Search -->
             <div class="search-box">
               <form method="post" action="contact.html">
@@ -268,7 +240,7 @@
                 </div>
                 <div class="col-md-12">
                   <button type="submit" class="thm-btn register-one__btn">
-                    Sign In with FlowAI
+                    Sign In
                   </button>
                 </div>
               </div>
@@ -280,88 +252,6 @@
         </div>
       </section>
       <!-- Login Page End -->
-
-      <!-- Color Palate / Color Switcher -->
-      <div class="color-palate">
-        <div class="color-trigger">
-          <i class="fas fa-cog fa-fw"></i>
-        </div>
-        <div class="color-palate-inner">
-          <div class="color-palate-head">
-            <h6>Choose Options</h6>
-          </div>
-          <!-- Colors -->
-          <div class="various-color clearfix">
-            <h6>Multiple Colors</h6>
-            <br />
-            <div class="colors-list">
-              <span
-                class="palate default-color active"
-                data-theme-file="css/color-themes/default-color.css"
-              ></span>
-              <span
-                class="palate blue-color"
-                data-theme-file="css/color-themes/blue-color.css"
-              ></span>
-              <span
-                class="palate brown-color"
-                data-theme-file="css/color-themes/brown-color.css"
-              ></span>
-              <span
-                class="palate green-color"
-                data-theme-file="css/color-themes/green-color.css"
-              ></span>
-              <span
-                class="palate orange-color"
-                data-theme-file="css/color-themes/orange-color.css"
-              ></span>
-              <span
-                class="palate purple-color"
-                data-theme-file="css/color-themes/purple-color.css"
-              ></span>
-              <span
-                class="palate teal-color"
-                data-theme-file="css/color-themes/teal-color.css"
-              ></span>
-              <span
-                class="palate yellow-color"
-                data-theme-file="css/color-themes/yellow-color.css"
-              ></span>
-            </div>
-          </div>
-          <h6>RTL Version</h6>
-          <ul class="rtl-version option-box">
-            <li class="rtl">RTL Version</li>
-            <li>LTR Version</li>
-          </ul>
-          <h6>Boxed Version</h6>
-          <ul class="box-version option-box">
-            <li class="box">Boxed</li>
-            <li>Full width</li>
-          </ul>
-          <h6>Want Sticky Header</h6>
-          <ul class="header-version option-box">
-            <li class="box">No</li>
-            <li>Yes</li>
-          </ul>
-          <h6>Dark Verion</h6>
-          <ul class="dark-version option-box">
-            <li class="box">Yes</li>
-            <li>No</li>
-          </ul>
-          <div class="purchase-box">
-            You will find much more options for colors and styling in admin
-            panel. This color picker is used only for demonstation purposes.
-            <a href="#" class="theme-btn btn-style-two">
-              <span class="btn-wrap">
-                <span class="text-one">buy now</span>
-                <span class="text-two">buy now</span>
-              </span>
-            </a>
-          </div>
-        </div>
-      </div>
-      <!-- End Color Palate / Color Switcher -->
 
       <!-- Search Popup -->
       <div class="search-popup">
