home page updated

--- a/1_html_file/index.html
+++ b/1_html_file/index.html
@@ -123,23 +123,24 @@
               <!-- Outer Box -->
               <div class="outer-box d-flex align-items-right">
                 <ul class="main-header__login-sing-up">
-                 <li> <a
-                        href="login.html"
-                        class=""
-                        style="
-                          padding: 10px 20px;
-                          text-decoration: none;
-                          background-color: #007bff;
-                          color: white;
-                          border-radius: 6px;
-                          font-weight: 500;
-                          transition: background-color 0.3s;
-                          hover: #0056b3;
-                          box-shadow: 0 8px 10px rgba(0, 0, 0, 0.64);
-                        "
-                      >
-                        Get Started Free
-                      </a></li>
+                 <li> <a href="login.html"style="
+                  background: linear-gradient(90deg, #4f46e5, #3b82f6);
+                  color: white;
+                  padding: 12px 32px;
+                  border: none;
+                  border-radius: 10px;
+                  font-size: 16px;
+                  font-weight: 500;
+                  cursor: pointer;
+                  box-shadow: 0 6px 15px rgba(59, 130, 246, 0.4);
+                  transition: all 0.3s ease;
+                  "
+onmousedown="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 8px 20px rgba(59, 130, 246, 0.6)';"
+onmouseup="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 15px rgba(59, 130, 246, 0.4)';">
+  Generate AI Image
+                 </a>
+
+</li>
                 </ul>
 
                 <!-- Mobile Navigation Toggler -->
@@ -215,14 +216,14 @@
               <div class="feature-one__color-overly-3 img-bounce"></div>
               <div class="feature-one__main-content-top">
                 <ul class="feature-one__list">
-                  <li>
+                  <li >
                     <div class="feature-one__single">
                       <div class="feature-one__icon">
                         <img src="images/icons/ai-content-writing.png" alt="" />
                       </div>
                       <h5 class="feature-one__title-2">
-                        <a href="about.html"
-                          >AI Content <br />
+                        <a href="#box1"
+                          >AI Content <br/>
                           Writing</a
                         >
                       </h5>
@@ -234,7 +235,7 @@
                         <img src="images/icons/ai-image.png" alt="" />
                       </div>
                       <h5 class="feature-one__title-2">
-                        <a href="about.html"
+                        <a href="#box2"
                           >AI Image <br />
                           Generator</a
                         >
@@ -290,7 +291,7 @@
       <!-- Solutions One End -->
 
       <!-- Solutions Two Start -->
-      <section class="solutions-two">
+      <section class="solutions-two" id="box1">
         <div class="container">
           <div class="section-title text-center">
             <div class="section-title__tagline-box">
@@ -367,15 +368,15 @@
                       href="about.html"
                       class="thm-btn solutions-two__content-one-btn"
                       style=" display: inline-block;
-    margin-top: 10px;
-    padding: 10px 20px;
-    text-decoration: none;
-    background-color: #007bff;
-    color: white;
-    border-radius: 6px;
-    font-weight: 500;
-    transition: background-color 0.3s, box-shadow 0.3s;
-    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.55);"
+                              margin-top: 10px;
+                              padding: 10px 20px;
+                              text-decoration: none;
+                              background-color: #007bff;
+                              color: white;
+                              border-radius: 6px;
+                              font-weight: 500;
+                              transition: background-color 0.3s, box-shadow 0.3s;
+                              box-shadow: 0 8px 10px rgba(0, 0, 0, 0.55);"
                     >
                       Get Started</a
                     >
@@ -383,7 +384,8 @@
                 </div>
               </div>
               <div class="col-xl-6 col-lg-6">
-  <div class="solutions-two__content-one-right">
+  
+                <div class="solutions-two__content-one-right">
     <div class="solutions-two__content-one-img-box mt-5">
       <div class="solutions-two__content-one-img">
         <video autoplay loop muted playsinline width="100%">
@@ -394,17 +396,15 @@
     </div>
   </div>
 </div>
-
-            </div>
-          </div>
-      
+</div>
+ </div>
+      <!-- Solutions Two End -->
       <div class="solutions-two__content-three wow fadeInUp" data-wow-delay="100ms">
   <div
-    class="solutions-two__content-three-shape-1"
-    style="background-image: url(images/shapes/solutions-two-content-three-shape-1.png);"
-  ></div>
-  <div class="row">
-    <div class="col-xl-6">
+    class="solutions-two__content-three-shape-1" id="box2"
+    style="background-image: url(images/shapes/solutions-two-content-three-shape-1.png);" ></div>
+  <div class="row" id="box2">
+    <div class="col-xl-6" id="box2">
     <div class="solutions-two__content-one-right">
     <div class="solutions-two__content-one-img-box m-5">
       <div class="solutions-two__content-one-img">
@@ -416,7 +416,7 @@
     </div>
   </div>
 </div>
-    <div class="col-xl-6">
+    <div class="col-xl-6" >
       <div class="solutions-two__content-three-right">
         <div class="solutions-two__content-three-title-box">
           <p>AI Writing Tools</p>
@@ -464,15 +464,15 @@
         </div>
         <div class="solutions-two__content-three-btn-box">
           <a href="about.html" class="thm-btn solutions-two__content-three-btn" style=" display: inline-block;
-    margin-top: 10px;
-    padding: 10px 20px;
-    text-decoration: none;
-    background-color: #007bff;
-    color: white;
-    border-radius: 6px;
-    font-weight: 500;
-    transition: background-color 0.3s, box-shadow 0.3s;
-    box-shadow: 0 8px 10px rgba(0, 0, 0, 0.55);">
+              margin-top: 10px;
+              padding: 10px 20px;
+              text-decoration: none;
+              background-color: #007bff;
+              color: white;
+              border-radius: 6px;
+              font-weight: 500;
+              transition: background-color 0.3s, box-shadow 0.3s;
+              box-shadow: 0 8px 10px rgba(0, 0, 0, 0.55);">
             Generate AI Image
           </a>
         </div>
@@ -480,9 +480,7 @@
     </div>
   </div>
 </div>
-
-        </div>
-      </section>
+</section>
      
 
       <section class="pricing-one mt-5">
@@ -632,9 +630,7 @@
                         >Start for Free</a
                       >
                     </div>
-                    <p class="pricing-one__text">**Build 100 creaditels free forever
-
-</p>
+                    <p class="pricing-one__text">**Build 100 creaditels free forever</p>
                     <ul class="list-unstyled pricing-one__points">
                       <li>
                         <div class="circle-box"></div>
